crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_assignment_expr.snap
---
source: crates/sith_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..8,
                value: NamedExpr(
                    NamedExpr {
                        range: 1..7,
                        target: Name(
                            NameExpr {
                                range: 1..2,
                                id: "x",
                                ctx: Store,
                            },
                        ),
                        value: NumberLiteral(
                            NumberLiteralExpr {
                                range: 6..7,
                                value: Int(
                                    5,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
