crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_attribute_normal.snap
---
source: crates/sith_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..12,
                targets: [
                    Attribute(
                        AttributeExpr {
                            range: 0..7,
                            value: Name(
                                NameExpr {
                                    range: 0..3,
                                    id: "foo",
                                    ctx: Load,
                                },
                            ),
                            attr: Identifier {
                                id: "bar",
                                range: 4..7,
                            },
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    NumberLiteralExpr {
                        range: 10..12,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
