crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_ipy_escape_command.snap
---
source: crates/sith_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
ParsedFile {
    ast: Module(
        ModModule {
            range: 0..9,
            body: [
                IpyEscapeCommand(
                    IpyEscapeCommandStmt {
                        range: 0..9,
                        kind: Shell,
                        value: "foo = 42",
                    },
                ),
            ],
        },
    ),
    parse_errors: [],
}
