crates/sith_python_parser/src/parser/tests/snapshots/python_parser__parser__tests__invalid_assignments__tests__ok_name.snap
---
source: crates/sith_python_parser/src/parser/tests/invalid_assignments.rs
expression: ast
---
(
    [
        Assign(
            AssignStmt {
                range: 0..8,
                targets: [
                    Name(
                        NameExpr {
                            range: 0..3,
                            id: "foo",
                            ctx: Store,
                        },
                    ),
                ],
                value: NumberLiteral(
                    NumberLiteralExpr {
                        range: 6..8,
                        value: Int(
                            42,
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
